--- a/static/src/css/custom.css
+++ b/static/src/css/custom.css
@@ -1,8 +1,9 @@
 ._container {
   background-color: #d5caec57;
-  color: #000000;
+  color: #00000088;
   padding: 3rem;
 }
+
 .color1 {
   background-color: rgba(178, 219, 233, 0.432);
 }
